--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   matrix:
     - DESTINATION="OS=10.2,name=iPhone 7" SDK="$IOS_SDK" POD_LINT="NO"
     - DESTINATION="OS=9.0,name=iPhone 6" SDK="$IOS_SDK" POD_LINT="NO"
-    - DESTINATION="OS=8.1,name=iPhone 4" SDK="$IOS_SDK" POD_LINT="YES"
+    - DESTINATION="OS=8.1,name=iPhone 5s" SDK="$IOS_SDK" POD_LINT="YES"
 script:
   - xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION" -configuration Debug test | xcpretty
   # Run `pod lib lint` if specified
