--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 language: objective-c
-osx_image: xcode8.2
+osx_image: xcode10.1
 env:
   global:
-  - IOS_SDK=iphonesimulator10.2
+  - IOS_SDK=iphonesimulator12.1
   - SCHEME=CustomLoader
   - WORKSPACE=CustomLoader.xcworkspace
   matrix:
+    - DESTINATION="OS=12.0,name=iPhone 8" SDK="$IOS_SDK" POD_LINT="NO"
+    - DESTINATION="OS=11.1,name=iPhone 8" SDK="$IOS_SDK" POD_LINT="NO"
     - DESTINATION="OS=10.1,name=iPhone 7" SDK="$IOS_SDK" POD_LINT="NO"
-    - DESTINATION="OS=9.0,name=iPhone 6" SDK="$IOS_SDK" POD_LINT="NO"
-    - DESTINATION="OS=8.4,name=iPhone 5s" SDK="$IOS_SDK" POD_LINT="YES"
+    - DESTINATION="OS=9.0,name=iPhone 6" SDK="$IOS_SDK" POD_LINT="YES"
 script:
   # important make sure that xcodebuid exit code is passed to xcpretty
   - set -o pipefail
